--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
     "husky": "^8.0.1",
+    "postcss": "^8.4.18",
     "prettier": "^2.7.1",
+    "tailwindcss": "^3.2.2",
     "typescript": "4.8.4"
   }
 }
