--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "next": "13.0.4",
+    "next": "^13.0.4",
     "next-themes": "^0.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
@@ -29,7 +29,7 @@
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.13",
     "eslint": "8.25.0",
-    "eslint-config-next": "13.0.4",
+    "eslint-config-next": "^13.0.4",
     "husky": "^8.0.1",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
