--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@next/font": "^13.0.4",
     "next": "^13.0.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
