--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@next/font": "^13.0.4",
+    "framer-motion": "^7.6.7",
     "next": "^13.0.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
