--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next": "^13.0.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
